@@ -248,7 +248,7 @@ DietPi-Software will decrypt and use it for software installs. You can change it
 	# Available for (need to match highest value in dietpi-obtain_hw_model)
 	MAX_G_HW_MODEL=72
 	MAX_G_HW_ARCH=10
-	MAX_G_DISTRO=5
+	MAX_G_DISTRO=6
 	# - 2D array (well, bash style)
 	declare -A aSOFTWARE_AVAIL_G_HW_MODEL
 	declare -A aSOFTWARE_AVAIL_G_HW_ARCH
@@ -523,6 +523,7 @@ DietPi-Software will decrypt and use it for software installs. You can change it
 
 		# - Buster: https://github.com/MichaIng/DietPi/issues/2787
 		aSOFTWARE_AVAIL_G_DISTRO[$software_id,5]=0
+		aSOFTWARE_AVAIL_G_DISTRO[$software_id,6]=0
 
 		#------------------
 		software_id=34
@@ -538,6 +539,7 @@ DietPi-Software will decrypt and use it for software installs. You can change it
 
 		# - Buster: https://github.com/MichaIng/DietPi/issues/2787
 		aSOFTWARE_AVAIL_G_DISTRO[$software_id,5]=0
+		aSOFTWARE_AVAIL_G_DISTRO[$software_id,6]=0
 
 		#------------------
 		software_id=35
@@ -980,6 +982,7 @@ DietPi-Software will decrypt and use it for software installs. You can change it
 		aSOFTWARE_ONLINEDOC_URL[$software_id]='p=47#p47'
 		# ownCloud up to 10.2 does not support PHP7.3 (Buster): https://doc.owncloud.org/server/administration_manual/installation/system_requirements.html
 		aSOFTWARE_AVAIL_G_DISTRO[$software_id,5]=0
+		aSOFTWARE_AVAIL_G_DISTRO[$software_id,6]=0
 		# ARMv6 devices have no chance to get some required PHP7.2 packages (APCu, Redis)
 		aSOFTWARE_AVAIL_G_HW_ARCH[$software_id,1]=0
 		# Disable if PHP7.3 is already installed
@@ -1234,6 +1237,7 @@ DietPi-Software will decrypt and use it for software installs. You can change it
 
 		# phpBB up to 3.2 does not support PHP7.3 (Buster)
 		aSOFTWARE_AVAIL_G_DISTRO[$software_id,5]=0
+		aSOFTWARE_AVAIL_G_DISTRO[$software_id,6]=0
 		# ARMv6 devices have no chance to get some required PHP7.2 packages (APCu, Redis)
 		aSOFTWARE_AVAIL_G_HW_ARCH[$software_id,1]=0
 		# Disable if PHP7.3 is already installed
@@ -1819,7 +1823,7 @@ DietPi-Software will decrypt and use it for software installs. You can change it
 		aSOFTWARE_ONLINEDOC_URL[$software_id]='p=54#p54'
 
 		# - non-RPi Buster: https://packages.debian.org/phpmyadmin
-		(( $G_HW_MODEL > 9 )) && aSOFTWARE_AVAIL_G_DISTRO[$software_id,5]=0
+		(( $G_HW_MODEL > 9 )) && aSOFTWARE_AVAIL_G_DISTRO[$software_id,5]=0 && aSOFTWARE_AVAIL_G_DISTRO[$software_id,6]=0
 
 		# Since the APT package depends on PHP meta packages, PHP7.2 cannot be installed
 		# Since ownCloud + phpBB require PHP7.2 currently, phpMyAdmin is not compatible with those
@@ -1853,7 +1857,7 @@ DietPi-Software will decrypt and use it for software installs. You can change it
 		aSOFTWARE_REQUIRES_JAVA_JRE_JDK[$software_id]=1
 
 		# - non-RPi Buster: https://packages.debian.org/tomcat8
-		(( $G_HW_MODEL > 9 )) && aSOFTWARE_AVAIL_G_DISTRO[$software_id,5]=0
+		(( $G_HW_MODEL > 9 )) && aSOFTWARE_AVAIL_G_DISTRO[$software_id,5]=0 && aSOFTWARE_AVAIL_G_DISTRO[$software_id,6]=0
 
 		# Pi-hole
 		#--------------------------------------------------------------------------------
@@ -6354,8 +6358,17 @@ Mycroft AI requires at least 2 GiB memory on first start. We will now increase y
 			# Stop OpenSSH service to unbind port 22
 			systemctl -q is-active ssh && systemctl stop ssh
 
-			# On Stretch+ Dropbear packages have been split, install "dropbear-run" only, to have active service, but skip "dropbear-initramfs"
-			G_AGI dropbear-run
+			# On Stretch + Buster Dropbear packages have been split, install "dropbear-run" only, to have active service, but skip "dropbear-initramfs"
+			# On Bullseye+ "dropbear-run" has become a transitional dummy package for "dropbear" which does not include "dropbear-initramfs" anymore.
+			if (( $G_DISTRO > 5 )); then
+
+				G_AGI dropbear
+
+			else
+
+				G_AGI dropbear-run
+
+			fi
 
 			# Enable Dropbear daemon
 			G_CONFIG_INJECT 'NO_START=' 'NO_START=0' /etc/default/dropbear
@@ -14241,10 +14254,7 @@ _EOF_
 		if (( ${aSOFTWARE_INSTALL_STATE[$software_id]} == -1 )); then
 
 			Banner_Uninstalling
-			G_AGP dropbear* # Stretch: dropbear-initramfs dropbear-run
-
-			# Required on Jessie only, since ECDSA key is not created on install automatically, thus not removed on uninstall
-			[[ -d '/etc/dropbear' ]] && rm -R /etc/dropbear
+			G_AGP dropbear*
 
 		fi
 
@@ -14323,7 +14333,7 @@ _EOF_
 			npm r -g n yarn npm
 			G_AGP nodejs
 
-			# - old install via repo
+			# Old install via repo
 			[[ -f '/etc/apt/sources.list.d/nodesource_nodejs.list' ]] && rm /etc/apt/sources.list.d/nodesource_nodejs.list
 
 			[[ -f '/usr/local/bin/node' ]] && rm /usr/local/bin/node
@@ -14375,14 +14385,14 @@ _EOF_
 		# Check if we need to clear DietPi choices
 		local fp_temp='.dietpi-uninstall_dpkg'
 		dpkg --get-selections | mawk '{print $1}' > $fp_temp
-		if ! grep -q '^openssh-server' $fp_temp && ! grep -q '^dropbear' $fp_temp; then
+		if ! grep -qE '^(openssh-server|dropbear)' $fp_temp; then
 
 			INDEX_SSHSERVER_CURRENT=0
 			INDEX_SSHSERVER_TARGET=0
 
 		fi
 
-		if ! grep -q '^samba$' $fp_temp && ! grep -q '^proftpd-basic' $fp_temp; then
+		if ! grep -qE '^(samba$|proftpd-basic)' $fp_temp; then
 
 			INDEX_FILESERVER_CURRENT=0
 			INDEX_FILESERVER_TARGET=0
