@@ -14,7 +14,7 @@
 	# In DietPi-Software: Need to match highest values in dietpi-obtain_hw_model
 	# - MAX_G_HW_MODEL=72
 	# - MAX_G_HW_ARCH=10
-	# - MAX_G_DISTRO=5
+	# - MAX_G_DISTRO=6
 	#
 	# ---- Line 1 ----
 	# G_HW_MODEL 72 ROCK Pi 4
@@ -70,8 +70,9 @@
 	# G_DISTRO 1 Debian Wheezy (No longer supported: https://dietpi.com/phpbb/viewtopic.php?p=1898)
 	# G_DISTRO 2 Ubuntu 14.04 (No longer supported)
 	# G_DISTRO 3 Jessie (No longer supported: https://github.com/MichaIng/DietPi/issues/2332)
-	# G_DISTRO 4 Stretch, pulled a muscle!
+	# G_DISTRO 4 Stretch
 	# G_DISTRO 5 Buster
+	# G_DISTRO 6 Bullseye
 	# ---- Line 4 ----
 	# RootFS device path (eg: /dev/mmcblk0p1)
 	# ---- Line 5 ----
@@ -787,6 +788,10 @@
 		elif grep -qi 'buster' /etc/os-release; then
 
 			G_DISTRO=5
+
+		elif grep -qi 'bullseye' /etc/os-release; then
+
+			G_DISTRO=6
 
 		fi
 
