@@ -103,23 +103,11 @@ $FP_SCRIPT	setpermissions		Applies required filesystem permissions to DietPi spe
 
 		if [[ $INPUT_MODE_VALUE ]]; then
 
-			# Set defaults?
-			if [[ $INPUT_MODE_VALUE == 'default' ]]; then
-
-				if (( $G_HW_MODEL < 10 )); then
-
-					INPUT_MODE_VALUE='http://raspbian.raspberrypi.org/raspbian/'
-
-				else
-
-					INPUT_MODE_VALUE='https://deb.debian.org/debian/'
-
-				fi
-
-			fi
-
-			# Set Raspbian
+			# Raspbian
 			if (( $G_HW_MODEL < 10 )); then
+
+				# - Default?
+				[[ $INPUT_MODE_VALUE == 'default' ]] && INPUT_MODE_VALUE='http://raspbian.raspberrypi.org/raspbian/'
 
 				echo "deb $INPUT_MODE_VALUE $G_DISTRO_NAME main contrib non-free rpi" > /etc/apt/sources.list
 				echo "deb https://archive.raspberrypi.org/debian/ $G_DISTRO_NAME main ui" > /etc/apt/sources.list.d/raspi.list
@@ -127,8 +115,11 @@ $FP_SCRIPT	setpermissions		Applies required filesystem permissions to DietPi spe
 				# - Update dietpi.txt entry
 				G_CONFIG_INJECT 'CONFIG_APT_RASPBIAN_MIRROR=' "CONFIG_APT_RASPBIAN_MIRROR=$INPUT_MODE_VALUE" /DietPi/dietpi.txt
 
-			# Set Debian
+			# Debian
 			else
+
+				# - Default?
+				[[ $INPUT_MODE_VALUE == 'default' ]] && INPUT_MODE_VALUE='https://deb.debian.org/debian/'
 
 				cat << _EOF_ > /etc/apt/sources.list
 deb $INPUT_MODE_VALUE $G_DISTRO_NAME main contrib non-free
@@ -136,6 +127,9 @@ deb $INPUT_MODE_VALUE $G_DISTRO_NAME-updates main contrib non-free
 deb https://deb.debian.org/debian-security/ $G_DISTRO_NAME/updates main contrib non-free
 deb $INPUT_MODE_VALUE $G_DISTRO_NAME-backports main contrib non-free
 _EOF_
+
+				# - On Bullseye, dir structure has changed: https://deb.debian.org/debian-security/dists/
+				(( $G_DISTRO > 5 )) && sed -i '3s|/updates|-security|' /etc/apt/sources.list
 
 				# - Update dietpi.txt entry
 				G_CONFIG_INJECT 'CONFIG_APT_DEBIAN_MIRROR=' "CONFIG_APT_DEBIAN_MIRROR=$INPUT_MODE_VALUE" /DietPi/dietpi.txt
